add sticky nav and nav slide animation

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@
 body {
     margin: 0;
     text-align: center;
-    font-family: 'Roboto', sans-serif;
+    font-family: system-ui, system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     color: #fff;
 }
 
@@ -24,12 +24,12 @@ body {
     position: absolute;
     top: 0;
     left: 0;
-  }
+}
 
 .info {
     font-size: 32pt;
     line-height: 36pt;
-    color:  #ffffff;
+    color: #ffffff;
 }
 
 #jumbotron {
@@ -37,7 +37,7 @@ body {
     height: calc(100vh + 50px);
 }
 
-span#name{
+span#name {
     color: #66fcf1;
 }
 
@@ -51,12 +51,12 @@ span#name{
     background: #282828;
     z-index: 99;
     overflow: hidden;
-    border-bottom: 3px solid #3500D4;
-} 
+    border-bottom: 3px solid #66fcf1;
+}
 
 .row {
     flex-direction: row;
-    
+
 }
 
 .wrap {
@@ -90,4 +90,21 @@ span#name{
 .container {
     max-width: 1200px;
     margin: 0 auto;
+}
+
+.fixed {
+    position: fixed;
+    top: 0;
+    left: 0;
+    animation: slideDown 0.3s;
+}
+
+@keyframes slideDown {
+    0% {
+        transform: translateY(-100%);
+    }
+
+    100% {
+        transform: translateY(0);
+    }
 }
