add contact section heading

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,7 +79,8 @@ span#name {
 }
 
 #about,
-#portfolio {
+#portfolio,
+#contact {
     color: #1f2833;
     background: #ffffff;
     padding: 50px 0 100px 0;
