--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -90,6 +90,10 @@ span#name {
     background: #F5F5F5
 }
 
+#footer {
+    background-color: #1f2833;
+}
+
 .container {
     max-width: 1200px;
     margin: 0 auto;
@@ -272,6 +276,14 @@ button {
 
 .intersect {
     opacity: 0;
+}
+
+#footer {
+    padding: 30px 0 20px 0;
+}
+
+.icon-wrap {
+    padding: 0 20px 0 20px;
 }
 
 @keyframes slideDown {
