--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -122,6 +122,7 @@ span#name {
 .section-header {
     font-size: 18pt;
     font-weight: 700;
+    margin-bottom: 25px;
 }
 
 .self {
@@ -332,6 +333,18 @@ button {
     }
 }
 
+@media screen and (max-width: 860px) and (min-width: 769px){
+
+    .self img {
+        margin: 0 0 30px 0;
+    }
+
+    .bio {
+        margin: 0;
+    }
+
+}
+
 @media screen and (max-width: 768px){
     .info {
         font-size: 24pt;
@@ -351,7 +364,7 @@ button {
     
     .bio p {
         margin: 0;
-        width: 300px;
+        width: 70vw;
     }
 
     .section-header {
