--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,7 +53,6 @@ span#name {
     width: 100%;
     background: #1f2833;
     z-index: 99;
-    overflow: hidden;
     border-bottom: 3px solid #86c232;
 }
 
@@ -84,6 +83,7 @@ span#name {
     color: #1f2833;
     background: #ffffff;
     padding: 50px 0 100px 0;
+    z-index: 1;
 }
 
 #portfolio {
@@ -287,6 +287,10 @@ button {
     padding: 0 20px 0 20px;
 }
 
+.menu-icon {
+    display: none;
+}
+
 @keyframes slideDown {
     0% {
         transform: translateY(-100%);
@@ -386,6 +390,41 @@ button {
     #contact {
         padding: 50px 0 50px 0;
     }
+
+    .nav-links {
+        max-width: 1200px;
+        width: 100%;
+        position: absolute;
+        top: 53px;
+        background-color: #1f2833;
+        overflow: hidden;
+        height: 0;
+        transition: height .3s ease-out;
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .nav-links a {
+        display: block;
+    }
+
+    .menu-icon {
+        position: absolute;
+        right: 5vw;
+        margin: 0 auto;
+        font-size: 30pt;
+        line-height: 36pt;
+        top: 0;
+        display: inline-block;
+        cursor: pointer;
+    }
+
+    .toggle-menu {
+        height: 220px;
+    }
+    /* #jumbotron {
+        position: relative;
+    } */
 }
 
 @media screen and (max-width: 414px){
