--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -166,12 +166,59 @@ span#name {
     height: 260px;
 }
 
-.projects img {
+.task img {
     width: 400px;
+    opacity: 1;
+    transition: opacity 0.3s ease-in;
 }
 
 label {
     text-align: left;
+}
+
+.projects .task {
+    position: relative;
+}
+
+.fade {
+    opacity: 0 !important;
+    
+}
+
+.projects .section-header {
+    position: absolute;
+    top: 0px;
+    color: #1f2833;
+    opacity: 0;
+    transition: all 0.4s ease-in-out;
+}
+
+.projects a {
+    position: absolute;
+    bottom: 0px;
+    color: #1f2833;
+    opacity: 0;
+    transition: all 0.4s ease-in-out;
+    text-decoration: none;
+    padding: 10px 20px 10px 20px;
+    border: 2px solid #86c232;
+    border-radius: 5px;
+    font-weight: 400;
+}
+
+.projects a:hover{
+    color: #fff;
+    background-color: #86c232;
+}
+
+.move-in {
+    opacity: 1 !important;
+    top: 50px !important;
+}
+
+.move-down {
+    opacity: 1 !important;
+    bottom: 50px !important;
 }
 
 .contact-wrap {
