--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -255,6 +255,10 @@ label {
     background-color: #86c232;
 }
 
+#profile-pic {
+    height: 300px;
+}
+
 .move-in {
     opacity: 1 !important;
     top: 50px !important;
